--- a/distributed-function.cabal
+++ b/distributed-function.cabal
@@ -2,21 +2,25 @@ name:                distributed-function
 version:             0.1.0.0
 synopsis:            Like a distributed `map` with zero configuration.
 description:         Please see README.md
-homepage:            http://github.com/githubuser/distributed-function#readme
+homepage:            https://github.com/josejuan/distributed-function
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2016 Author Here
-category:            Web
+author:              josejuan
+maintainer:          jose-juan@computer-mind.com
+copyright:           2016 josejuan
+category:            Control
 build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Control.Distributed.Process.SimpleMap
   build-depends:       base >= 4.7 && < 5
+                     , distributed-process >= 0.5.5.1
+                     , distributed-process-simplelocalnet >= 0.2.3.2
+                     , binary >= 0.7.5.0
+                     , network >= 2.6.2.1
   default-language:    Haskell2010
 
 executable distributed-function-exe
