--- a/distributed-function.cabal
+++ b/distributed-function.cabal
@@ -23,9 +23,9 @@ library
                      , network >= 2.6.2.1
   default-language:    Haskell2010
 
-executable distributed-function-exe
-  hs-source-dirs:      app
-  main-is:             Main.hs
+executable slow-primes-exe
+  hs-source-dirs:      examples
+  main-is:             SlowPrimes.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , distributed-function
